k8s/gatekeeper/test-privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-privileged
  namespace: default
spec:
  containers:
    - name: test
      image: nginx:latest
      securityContext:
        privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: test-hostnetwork
  namespace: default
spec:
  hostNetwork: true
  containers:
    - name: test
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-hostpid
  namespace: default
spec:
  hostPID: true
  containers:
    - name: test
      image: nginx:latest
